2008-09-10  Douglas Bates <bates@stat.wisc.edu>

	* [r2260] src/Mutils.h, src/chm_common.c, src/cs_utils.c,
	  src/dsCMatrix.c: Update doxygen comments

2008-09-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/ddiMatrix-class.Rd: docu update : sparse, not dense (see 2008-07-28).
	* man/ldiMatrix-class.Rd , man/diagonalMatrix-class.Rd: ditto.

2008-09-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-14  to be released to CRAN,
	in order to comply to to pending changes in R-devel (2.8.0).

2008-09-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (solve,..): use (Matrix,ANY)... instead of (Matrix,Matrix)
	* R/Ops.R: ditto; most of these from John Chambers.
	* man/Matrix-class.Rd

	* R/Auxiliaries.R (.diagU2N): fix for Rsparse*
	* tests/Simple.R: test it

2008-09-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/drop0.Rd:
	* R/Auxiliaries.R (drop0): new argument 'tol = 0' (and
	'is.Csparse'); entails updates in
	* R/Csparse.R, R/lMatrix.R, R/dMatrix.R

2008-08-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-13 released to CRAN

2008-08-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (attrSlotNames, attrSlots, attr.all_Mat): new
	utilities, for now to be used in all.equal() methods.

	* R/Matrix.R (all.equal_Mat): be more careful (less tolerant) in
	all.equal() methods.
	* R/sparseMatrix.R: ditto

2008-08-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-12 released to CRAN

	* R/Ops.R (Compare(<Csparse>,<Csparse>): fix for nsparseMatrix

2008-08-27  Douglas Bates <bates@stat.wisc.edu>

	* R/sparseMatrix.R: fac2sparse() for NA's

2008-08-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseVector.R (all.equal.sparseV): make work for nsparseVector's

2008-08-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dgCMatrix.c (dgCMatrix_LU): partially revert change