@@ -1,5 +1,5 @@
 
-R version 2.7.2 Patched (2008-09-02 r46496)
+R version 2.7.2 Patched (2008-09-12 r46542)
 Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -238,7 +238,6 @@ Formal class 'dgTMatrix' [package "Matrix"] with 6 slots
 > A <- as(Matrix(a), "TsparseMatrix")
 > A. <- A
 > diag(A.) <- 10 * (1:6)
-keeping Tsparse matrix *symmetric* in sub-assignment
 > a. <- as(A., "matrix")
 > ## More testing {this was not working for a long time..}
 > set.seed(1)
@@ -1053,7 +1052,6 @@ det...(): ok
 > ## now a slightly different situation for 's2' (had bug)
 > s2 <- as(dm, "sparseMatrix")
 > s2[I,I] <- 0; diag(s2)[2:3] <- -(1:2)
-keeping Tsparse matrix *symmetric* in sub-assignment
 > stopifnot(is(s2,"symmetricMatrix"), diag(s2) == c(0:-2,0))
 > t2 <- as(s2, "TsparseMatrix")
 > m <- as.mat(s2)
@@ -1073,7 +1071,6 @@ keeping Tsparse matrix *symmetric* in sub-assignment
 > m.[ cbind(3:5, 1:3) ] <- 1:3
 > stopifnot(m.[3,1] == 1, m.[4,2] == 2)
 > x.x[ cbind(2:6, 2:6)] <- 12:16
-keeping Tsparse matrix *symmetric* in sub-assignment
 > stopifnot(isValid(x.x, "dsCMatrix"),
 + 	  12:16 == as.mat(x.x)[cbind(2:6, 2:6)])
 > (ne1 <- (mc - m.) != 0)
@@ -1111,6 +1108,32 @@ Warning: Ambiguous method selection for "!=", target "numeric#dgCMatrix" (the fi
 > d6[cbind(ii,ii)] <- 7*ii
 > stopifnot(is(d6, "ddiMatrix"), identical(d6, Diagonal(x=c(7*1:2,1,7*4:5,1))))
 > 
+> for(j in 3:6) { ## even and odd j used to behave differently
++     M <- Matrix(0, j,j); m <- matrix(0, j,j)
++     T  <- as(M, "TsparseMatrix")
++     TG <- as(T, "generalMatrix")
++     G <-  as(M, "generalMatrix")
++     id <- cbind(1:j,1:j)
++     i2 <- cbind(1:j,j:1)
++     m[id] <- 1:j
++     M[id] <- 1:j ; stopifnot(is(M,"symmetricMatrix"))
++     T[id] <- 1:j ; stopifnot(is(T,"symmetricMatrix"))
++     G[id] <- 1:j
++     TG[id]<- 1:j
++     m[i2] <- 10
++     M[i2] <- 10 ; stopifnot(is(M,"symmetricMatrix"))
++     T[i2] <- 10 ; stopifnot(is(T,"symmetricMatrix"))
++     G[i2] <- 10
++     TG[i2]<- 10
++     ##
++     assert.EQ.mat(M, m)
++     assert.EQ.mat(T, m)
++     assert.EQ.mat(G, m)
++     assert.EQ.mat(TG,m)
++ }
+> 
+> 
+> ## drop, triangular, ...
 > (M3 <- Matrix(upper.tri(matrix(, 3, 3)))) # ltC; indexing used to fail
 3 x 3 sparse Matrix of class "ltCMatrix"
           
@@ -1189,7 +1212,7 @@ Warning: Ambiguous method selection for "!=", target "numeric#dgCMatrix" (the fi
 > cc <- capture.output(show(dLrg))# show(<diag>) used to error for large n
 > 
 > cat('Time elapsed: ', (.pt <- proc.time()),'\n') # "stats"
-Time elapsed:  17.213 0.248 23.227 0 0 
+Time elapsed:  11.365 2.604 15.202 0 0 
 > ##
 > cat("checkMatrix() of all: \n---------\n")
 checkMatrix() of all: 
@@ -1213,6 +1236,7 @@ C
 Clrg 
 Ctrg 
 D 
+G 
 H 
 Warning: Ambiguous method selection for "==", target "lgCMatrix#ltCMatrix" (the first of the signatures shown will be used)
     CsparseMatrix#CsparseMatrix
@@ -1309,9 +1333,7 @@ S
 diagnosing replTmat(x,i,j,v): nargs()= 3; missing(i,j)= (0,1).
 'sub-optimal sparse 'x[i] <- v' assignment: Coercing class dtTMatrix to dgTMatrix
 T 
-.TM.repl.i.2col(): drop 'matrix' case ...
-diagnosing replTmat(x,i,j,v): nargs()= 3; missing(i,j)= (0,1).
-'sub-optimal sparse 'x[i] <- v' assignment: Coercing class dtTMatrix to dgTMatrix
+suboptimal implementation of sparse 'symm. o symm.'
 T3 
 Warning: Ambiguous method selection for "^", target "ltTMatrix#numeric" (the first of the signatures shown will be used)
     lMatrix#numeric
@@ -1328,6 +1350,7 @@ T6
 .TM.repl.i.2col(): drop 'matrix' case ...
 diagnosing replTmat(x,i,j,v): nargs()= 3; missing(i,j)= (0,1).
 'sub-optimal sparse 'x[i] <- v' assignment: Coercing class ltTMatrix to lgTMatrix
+TG 
 Tii 
 suboptimal implementation of sparse 'symm. o symm.'
 cI 
@@ -1442,7 +1465,7 @@ suboptimal implementation of sparse 'symm. o symm.'
 x.x. 
 suboptimal implementation of sparse 'symm. o symm.'
 > cat('Time elapsed: ', proc.time() - .pt,'\n') # "stats"
-Time elapsed:  14.312 0.084 17.814 0 0 
+Time elapsed:  9.258 0.252 9.53 0 0 
 > 
 > if(!interactive()) warnings()
 NULL
